2002-03-15  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Use "sed -e 1q" instead of "head -1", for compliance
	to pure naked POSIX 1003.1-2001 environments.
	From Paul Eggert.

2002-03-14  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-team-name-to-code): Add es_AR, zh_CN, and zh_TW.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Checking
	'insert-file-contents' must come first to avoid messing up with
	arguments.
	Reported by Neil Darlow; fixed by Andreas Schwab.

2002-03-09  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Don't try to
	detect the coding system when filename does not exist.
	(po-compute-counters): Search for "^msgid" not 'po-next-entry' if
	we don't know for sure any entry will follow at all.

2002-02-18  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode): Provide it.

2002-02-19  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Mark all error messages which lead to failure with
	asterisks and "*** Stop.".

2002-02-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-subedit-ediff): When variants are equal don't call
	'po-ediff-buffers-exit-recursive'.

2002-02-09  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-send-mail): Set coding-system-for-read and
	coding-system-for-write to the coding system of the po buffer;
	otherwise Emacs will fall back to mule-utf-8 when the default coding
	system is different from the po buffer and thus the following
	'shell-command-on-region' will prepare an wrongly encoded file (e.g.,
	mule-utf-8 instead of UTF-8).

2002-02-09  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-translation-project-address): Convert it to a
	customizable variable.
	(po-translation-project-mail-label): New variable.
	(po-send-mail): Use it.

2002-02-01  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-version-string): New variable.