@@ -233,6 +233,7 @@ slightly different."
     ("Hiri Motu" . "ho")
     ("Hungarian" . "hu")
     ("Icelandic" . "is")
+    ("Ido" . "io")
     ("Indonesian" . "id")
     ("Interlingua" . "ia")
     ("Interlingue" . "ie")
@@ -241,7 +242,7 @@ slightly different."
     ("Irish" . "ga")
     ("Italian" . "it")
     ("Japanese" . "ja")
-    ("Javanese" . "jw")
+    ("Javanese" . "jv")
     ("Kalaallisut" . "kl")
     ("Kannada" . "kn")
     ("Kashmiri" . "ks")
@@ -338,6 +339,7 @@ slightly different."
     ("Uzbek" . "uz")
     ("Vietnamese" . "vi")
     ("Volapuk" . "vo")
+    ("Walloon" . "wa")
     ("Welsh" . "cy")
     ("Wolof" . "wo")
     ("Xhosa" . "xh")
